# 3-package-scarlet_macaw

./: Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: unit-tests.yml
src/devmood/: __init__.py  core.py
tests/: test_devmood.py
