[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devmood"
version = "0.1.0"
description = "Emotional support for developers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["developer", "mood", "humor", "fun", "ascii"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Games/Entertainment",
]

[project.urls]
Homepage = "https://github.com/swe-students-spring2026/3-package-scarlet_macaw"
Repository = "https://github.com/swe-students-spring2026/3-package-scarlet_macaw"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
